# ocaml-maildir

./: .gitignore  LICENSE.md  Makefile  README.md  _oasis  _tags  dune-project  maildir.install  maildir.opam  myocamlbuild.ml  setup.ml
fuzz/: dune  fuzz.ml
lib/: META  dune  jbuild  maildir.ml  maildir.mldylib  maildir.mli
lib-mem/: dune  maildir_mem.ml  maildir_mem.mli
lib-unix/: dune  maildir_unix.ml  maildir_unix.mli
lib_test/: test.ml
maildir/: index.html
maildir/Maildir/: index.html
test/: dune  test_mem.ml
