opam-version: "1.2"
name: "maildir"
version: "0.9.0"
maintainer: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
authors: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
homepage: "https://github.com/nojb/ocaml-maildir"
license: "MIT"
dev-repo: "git://github.com/nojb/ocaml-maildir"
build: [
  ["oasis" "setup"]
  ["./configure" "--prefix" prefix]
  [make "build"]
]
install: [make "install"]
remove: [
  [make "uninstall"]
  ["ocamlfind" "remove" "maildir"]
]
depends: [
]
