opam-version: "1.2"
name: "maildir"
version: "0.10.0"
maintainer: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
authors: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
homepage: "https://github.com/nojb/ocaml-maildir"
dev-repo: "https://github.com/nojb/ocaml-maildir.git"
bug-reports: "https://github.com/nojb/ocaml-maildir/issues"
license: "MIT"
depends: [
  "dune" {build & >= "1.1.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
available: [ocaml-version >= "4.02.3"]
