opam-version: "2.0"
name: "maildir"
version: "0.10.0"
maintainer: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
authors: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
homepage: "https://github.com/nojb/ocaml-maildir"
dev-repo: "git+https://github.com/nojb/ocaml-maildir.git"
bug-reports: "https://github.com/nojb/ocaml-maildir/issues"
license: "MIT"
synopsis: "Maildir implementation in OCaml"
description: """
Maildir implementation in OCaml for different backends (unix & memory)
"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "angstrom"
  "rresult"
  "fmt"
  "fpath"
  "bos"
  "logs"
  "alcotest" {with-test}
]
